[leek][chart] Fix leek chart label alignment

--- a/http/style/leek.css
+++ b/http/style/leek.css
@@ -267,7 +267,8 @@
 	fill-opacity: .2;
 }
 #leek-page #talent-history .ct-label.ct-horizontal {
-  text-align: center;
+	text-align: center;
+	display: block;
 }
 
 #talent-history .tooltip {
